--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de partidas Rankeadas</title>
+    <title>Calculadora de Partidas Ranqueadas</title>
     
     <link rel="stylesheet" href="src/style.css">
 
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <img src="/src/cool.png" alt="gato com tampão de pirata estilo pixel">
-        <h1>Calculadora de Partidas Rankeadas</h1>
+        <h1>Calculadora de Partidas Ranqueadas</h1>
         <br><br>
         <label>Informe o número de vitórias</label>
         <input type="number" placeholder="Número de vitórias :)" id="numeroVitorias">
@@ -23,7 +23,7 @@
         <label>Informe o número de derrotas </label>
         <input type="number" placeholder="Número de derrotas :(" id="numeroDerrotas">
         <br><br>
-        <button onclick="calcularRanking()" id="btnClassificador">Calcular Ranking</button>
+        <button onclick="calcularRanque()" id="btnClassificador">Calcular Ranque</button>
         <br>
         <div>
             <p id="resultadoClassificacao"></p>
